test/tasty/pos/src-2/tastytest/TestDelayedInverse.scala
package tastytest

object TestDelayedInverse {
  def test: DelayedInverse.Parent[Nothing] = ???
}
