test/tasty/neg/src-2/TestDelayedPrivate_fail.scala
package tastytest

object TestDelayedPrivate {

  locally {
    val _ = Nil: List[DelayedPrivate.Root] // force Root to be seen first
    DelayedPrivate.Nested.Deeper
  }
}
